# platform-k3d

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .shellcheckrc  .tflint.hcl  .tool-versions  LICENSE  README.md
.forgejo/: Dockerfile.ci
.forgejo/workflows/: ci-apps.yaml  ci-infra.yaml  image-bump.yaml
apps/api-service/: Cargo.toml  Dockerfile
apps/api-service/src/: config.rs  db.rs  handlers.rs  main.rs  metrics.rs
apps/inventory-service/: Cargo.toml  Dockerfile
apps/inventory-service/src/: config.rs  db.rs  handlers.rs  main.rs  metrics.rs
charts/microservice/: Chart.yaml  values.yaml
charts/microservice/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  previewservice.yaml  rollout.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  smoke-test-job.yaml
docs/: RUNBOOK.md  architecture.md
gitops/bootstrap/: Chart.yaml  values.yaml
scripts/: creds.sh  demo-deploy.sh  endpoints.sh  lazy-down.sh  lazy.sh  test.sh
stages/: terragrunt.hcl
stages/_common/: bootstrap.hcl  cluster.hcl  services.hcl
stages/dev/: env.hcl
stages/prod/: env.hcl
stages/staging/: env.hcl
terraform/: README.md
terraform/bootstrap/: .terraform.lock.hcl  argocd.tf  backend.tf  forgejo.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  vault.tf  versions.tf
terraform/cluster/: .terraform.lock.hcl  backend.tf  images.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/services/: .terraform.lock.hcl  backend.tf  db-roles.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
(+127 files in other folders)
