[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"
description = "Product-inventory HTTP API"
license = "MIT"

[[bin]]
name = "inventory-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
axum = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
once_cell = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
strip = true
